--- a/DocumentCentricStartUI/webapp/test/mockServer.html
+++ b/DocumentCentricStartUI/webapp/test/mockServer.html
@@ -9,15 +9,15 @@
             src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
             data-sap-ui-theme="sap_belize"
             data-sap-ui-resourceroots='{
-				"ibpm.demo.DocumentCentricStartUI": "../"
+				"com.sap.bpm.DocumentCentricStartUI": "../"
 			}'
-            data-sap-ui-oninit="module:ibpm.demo/DocumentCentricStartUI/test/initMockServer"
+            data-sap-ui-oninit="module:com.sap.bpm/DocumentCentricStartUI/test/initMockServer"
             data-sap-ui-compatVersion="edge"
             data-sap-ui-async="true"
             data-sap-ui-frameOptions="trusted">
     </script>
 </head>
 <body class="sapUiBody">
-<div data-sap-ui-component data-name="ibpm.demo.DocumentCentricStartUI" data-id="container" data-settings='{"id" : "DocumentCentricStartUI"}'></div>
+<div data-sap-ui-component data-name="com.sap.bpm.DocumentCentricStartUI" data-id="container" data-settings='{"id" : "DocumentCentricStartUI"}'></div>
 </body>
 </html>
