--- a/DocumentCentricStartUI/webapp/index.html
+++ b/DocumentCentricStartUI/webapp/index.html
@@ -7,7 +7,7 @@
 		<script id="sap-ui-bootstrap"
 			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
 			data-sap-ui-theme="sap_belize"
-			data-sap-ui-resourceroots='{"ibpm.demo.DocumentCentricStartUI": "./"}'
+			data-sap-ui-resourceroots='{"com.sap.bpm.DocumentCentricStartUI": "./"}'
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
 			data-sap-ui-async="true"
@@ -15,6 +15,6 @@
 		</script>
 	</head>
 	<body class="sapUiBody">
-		<div data-sap-ui-component data-name="ibpm.demo.DocumentCentricStartUI" data-id="container" data-settings='{"id" : "DocumentCentricStartUI"}'></div>
+		<div data-sap-ui-component data-name="com.sap.bpm.DocumentCentricStartUI" data-id="container" data-settings='{"id" : "DocumentCentricStartUI"}'></div>
 	</body>
 </html>
