--- a/DocumentCentricStartUI/webapp/test/integration/opaTests.qunit.html
+++ b/DocumentCentricStartUI/webapp/test/integration/opaTests.qunit.html
@@ -8,7 +8,7 @@
 		src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
 		data-sap-ui-theme='sap_belize'
 		data-sap-ui-resourceroots='{
-			"ibpm.demo.DocumentCentricStartUI": "../../"
+			"com.sap.bpm.DocumentCentricStartUI": "../../"
 		}'
 		data-sap-ui-animation="false"
 		data-sap-ui-compatVersion="edge"
