--- a/DocumentCentricStartUI/webapp/test/unit/unitTests.qunit.html
+++ b/DocumentCentricStartUI/webapp/test/unit/unitTests.qunit.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Unit tests for ibpm.demo/DocumentCentricStartUI</title>
+	<title>Unit tests for com.sap.bpm/DocumentCentricStartUI</title>
 
 	<script id="sap-ui-bootstrap"
 		src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
 		data-sap-ui-resourceroots='{
-			"ibpm/demo/DocumentCentricStartUI": "../../"
+			"com/sap/bpm/DocumentCentricStartUI": "../../"
 		}'>
 	</script>
 
